Fix focus and searching in nicklist

--- a/glade/main_window.ui
+++ b/glade/main_window.ui
@@ -24,11 +24,11 @@
     <accel-groups>
       <group name="main_accel_group"/>
     </accel-groups>
-    <signal name="size_allocate" handler="main_window_size_allocate"/>
+    <signal name="delete_event" handler="main_window_delete_event"/>
     <signal name="focus_in_event" handler="main_window_focus_in_event"/>
+    <signal name="size_allocate" handler="main_window_size_allocate"/>
     <signal name="scroll_event" handler="main_window_scroll_event"/>
     <signal name="window_state_event" handler="main_window_window_state_event"/>
-    <signal name="delete_event" handler="main_window_delete_event"/>
     <child>
       <object class="GtkVBox" id="main_vbox">
         <property name="visible">True</property>
@@ -366,10 +366,12 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="has_focus">True</property>
+                                <property name="is_focus">True</property>
                                 <property name="can_default">True</property>
                                 <property name="has_default">True</property>
                                 <property name="receives_default">True</property>
                                 <property name="invisible_char">&#x2022;</property>
+                                <property name="text" translatable="yes">s</property>
                                 <signal name="key_press_event" handler="input_entry_key_press_event"/>
                                 <signal name="activate" handler="input_entry_activate"/>
                               </object>
@@ -477,7 +479,7 @@
                             <property name="headers_visible">False</property>
                             <property name="headers_clickable">False</property>
                             <property name="rules_hint">True</property>
-                            <property name="search_column">0</property>
+                            <property name="search_column">1</property>
                             <property name="enable_tree_lines">True</property>
                             <signal name="button_press_event" handler="nicks_view_button_press_event"/>
                             <signal name="row_activated" handler="nicks_view_row_activated"/>
