--- a/glade/dialogs/server.ui
+++ b/glade/dialogs/server.ui
@@ -1,8 +1,14 @@
 <?xml version="1.0"?>
-<glade-interface>
-  <!-- interface-requires gtk+ 2.6 -->
+<interface>
+  <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy toplevel-contextual -->
-  <widget class="GtkDialog" id="serverDialog">
+  <object class="GtkListStore" id="serverStore">
+    <columns>
+      <!-- column-name Server -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
+  <object class="GtkDialog" id="serverDialog">
     <property name="border_width">6</property>
     <property name="title" translatable="yes">Server List</property>
     <property name="window_position">center-on-parent</property>
@@ -10,41 +16,60 @@
     <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
-      <widget class="GtkVBox" id="dialog-vbox1">
+      <object class="GtkVBox" id="dialog-vbox1">
         <property name="visible">True</property>
         <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child>
-          <widget class="GtkViewport" id="viewport1">
+          <object class="GtkScrolledWindow" id="serverWindow">
             <property name="visible">True</property>
-            <property name="resize_mode">queue</property>
+            <property name="can_focus">True</property>
+            <property name="hscrollbar_policy">automatic</property>
+            <property name="vscrollbar_policy">automatic</property>
             <property name="shadow_type">etched-in</property>
             <child>
-              <widget class="GtkTreeView" id="serverList">
+              <object class="GtkTreeView" id="serverList">
                 <property name="visible">True</property>
-                <signal name="select_cursor_row" handler="serverList_select_cursor_row_cb"/>
-                <signal name="row_activated" handler="serverList_row_activated_cb"/>
-              </widget>
+                <property name="can_focus">True</property>
+                <property name="model">serverStore</property>
+                <property name="search_column">0</property>
+                <child>
+                  <object class="GtkTreeViewColumn" id="serverColumn">
+                    <property name="title">Server</property>
+                    <property name="clickable">True</property>
+                    <property name="sort_column_id">0</property>
+                    <child>
+                      <object class="GtkCellRendererText" id="serverRenderer">
+                        <property name="editable">True</property>
+                        <signal name="edited" handler="serverRenderer_edited_cb"/>
+                      </object>
+                      <attributes>
+                        <attribute name="text">0</attribute>
+                      </attributes>
+                    </child>
+                  </object>
+                </child>
+              </object>
             </child>
-          </widget>
+          </object>
           <packing>
             <property name="position">1</property>
           </packing>
         </child>
         <child>
-          <widget class="GtkHButtonBox" id="hbuttonbox1">
+          <object class="GtkHButtonBox" id="hbuttonbox1">
             <property name="visible">True</property>
             <property name="spacing">6</property>
             <property name="layout_style">center</property>
             <child>
-              <widget class="GtkButton" id="deleteButton">
+              <object class="GtkButton" id="deleteButton">
                 <property name="label">gtk-delete</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
                 <signal name="clicked" handler="deleteButton_clicked_cb"/>
-              </widget>
+              </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
@@ -52,14 +77,14 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkButton" id="editButton">
+              <object class="GtkButton" id="editButton">
                 <property name="label">gtk-edit</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
                 <signal name="clicked" handler="editButton_clicked_cb"/>
-              </widget>
+              </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
@@ -67,39 +92,38 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkButton" id="addButton">
+              <object class="GtkButton" id="addButton">
                 <property name="label">gtk-add</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
                 <signal name="clicked" handler="addButton_clicked_cb"/>
-              </widget>
+              </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
                 <property name="position">2</property>
               </packing>
             </child>
-          </widget>
+          </object>
           <packing>
             <property name="expand">False</property>
             <property name="position">2</property>
           </packing>
         </child>
         <child internal-child="action_area">
-          <widget class="GtkHButtonBox" id="dialog-action_area1">
+          <object class="GtkHButtonBox" id="dialog-action_area1">
             <property name="visible">True</property>
             <property name="layout_style">end</property>
             <child>
-              <widget class="GtkButton" id="closeButton">
+              <object class="GtkButton" id="closeButton">
                 <property name="label">gtk-cancel</property>
-                <property name="response_id">-6</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
-              </widget>
+              </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
@@ -108,28 +132,31 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkButton" id="connectButton">
+              <object class="GtkButton" id="connectButton">
                 <property name="label">gtk-connect</property>
-                <property name="response_id">3</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
-              </widget>
+              </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
                 <property name="position">1</property>
               </packing>
             </child>
-          </widget>
+          </object>
           <packing>
             <property name="expand">False</property>
             <property name="pack_type">end</property>
             <property name="position">0</property>
           </packing>
         </child>
-      </widget>
+      </object>
     </child>
-  </widget>
-</glade-interface>
+    <action-widgets>
+      <action-widget response="-6">closeButton</action-widget>
+      <action-widget response="3">connectButton</action-widget>
+    </action-widgets>
+  </object>
+</interface>
