--- a/ui/dialogs/channelList.ui
+++ b/ui/dialogs/channelList.ui
@@ -20,6 +20,7 @@
     <property name="default_height">300</property>
     <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
+    <signal name="response" handler="dialog_response"/>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox5">
         <property name="visible">True</property>
@@ -37,7 +38,7 @@
                   <object class="GtkEntry" id="regexpEntry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <signal name="activate" handler="regexpEntry_activate_cb"/>
+                    <signal name="activate" handler="regexp_entry_activate"/>
                   </object>
                   <packing>
                     <property name="position">0</property>
@@ -50,7 +51,7 @@
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_stock">True</property>
-                    <signal name="clicked" handler="listButton_clicked_cb"/>
+                    <signal name="clicked" handler="find_button_clicked"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -61,10 +62,11 @@
                   <object class="GtkButton" id="stopListButton">
                     <property name="label">gtk-stop</property>
                     <property name="visible">True</property>
+                    <property name="sensitive">False</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
                     <property name="use_stock">True</property>
-                    <signal name="clicked" handler="stopListButton_clicked_cb"/>
+                    <signal name="clicked" handler="stop_button_clicked"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -91,7 +93,7 @@
                     <property name="border_width">12</property>
                     <property name="model">listStore</property>
                     <property name="search_column">0</property>
-                    <signal name="row_activated" handler="listView_row_activated_cb"/>
+                    <signal name="row_activated" handler="listView_row_activated"/>
                     <child>
                       <object class="GtkTreeViewColumn" id="channelColumn">
                         <property name="min_width">85</property>
