--- a/ui/dialogs/join.ui
+++ b/ui/dialogs/join.ui
@@ -56,7 +56,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="invisible_char">&#x25CF;</property>
-                    <property name="text" translatable="yes">#</property>
+                    <property name="text">#</property>
                     <property name="shadow_type">etched-out</property>
                   </object>
                   <packing>
