--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -476,6 +476,7 @@
                           <object class="GtkTreeView" id="nicks_view">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
+                            <property name="has_tooltip">True</property>
                             <property name="headers_visible">False</property>
                             <property name="headers_clickable">False</property>
                             <property name="rules_hint">True</property>
@@ -483,6 +484,7 @@
                             <property name="enable_tree_lines">True</property>
                             <signal name="button_press_event" handler="nicks_view_button_press_event"/>
                             <signal name="row_activated" handler="nicks_view_row_activated"/>
+                            <signal name="query_tooltip" handler="nicks_view_query_tooltip"/>
                             <child>
                               <object class="GtkTreeViewColumn" id="nicks_store_prefix_column">
                                 <property name="title">Prefix</property>
