--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -285,6 +285,7 @@
                 <child>
                   <object class="GtkLabel" id="topic_label">
                     <property name="xpad">4</property>
+                    <property name="ypad">4</property>
                     <property name="label"></property>
                     <property name="use_markup">True</property>
                     <property name="selectable">True</property>
