--- a/ui/dialogs/contrast.ui
+++ b/ui/dialogs/contrast.ui
@@ -4,9 +4,10 @@
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
   <object class="GtkDialog" id="contrast_dialog">
-    <property name="border_width">5</property>
+    <property name="border_width">6</property>
     <property name="title" translatable="yes">Select a color</property>
     <property name="window_position">center-on-parent</property>
+    <property name="destroy_with_parent">True</property>
     <property name="type_hint">normal</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox1">
@@ -125,7 +126,7 @@
       </object>
     </child>
     <action-widgets>
-      <action-widget response="0">select_button</action-widget>
+      <action-widget response="-5">select_button</action-widget>
       <action-widget response="-6">cancel_button</action-widget>
     </action-widgets>
   </object>
